--- a/public/app/groups/group.html
+++ b/public/app/groups/group.html
@@ -94,7 +94,11 @@
                     </span>
                 </div>
                 <div class="form-group pull-right">
-                    <button class="btn btn-danger">Удалить</button>
+                    <button type="button" class="btn btn-danger"
+                            data-ng-really-message="<strong>Внимание!</strong><br>Вы собираетесь безвозвратно удалить группу <strong>«{{vm.group.title}}»</strong>  и всю связанную с ней информацию.<br>Продолжить?"
+                            data-ng-really-click="vm.deleteGroup()">
+                        Удалить группу
+                    </button>
                     <button class="btn btn-primary">Сохранить</button>
                 </div>
             </form>
