Discipline access changes now have a proper impact on lectures progress

--- a/public/app/groups/group.html
+++ b/public/app/groups/group.html
@@ -23,7 +23,7 @@
                         <td><span class="glyphicon glyphicon-ok" data-ng-if="discipline.access"></span></td>
                     </tr>
                 </table>
-                <button data-ng-if="vm.changed" class="btn btn-primary pull-right" data-ng-click="vm.saveAccessData()">
+                <button data-ng-if="vm.changed" class="btn btn-primary pull-right animate-if" data-ng-click="vm.saveAccessData()">
                     Сохранить
                 </button>
             </tab>
